{{$NEXT}}

1.27     2018-06-09

- This release is identical to 1.26 except that it is a stable release, not a
  trial.

- Fixed the tests so they will not break in the year 2020. The tests were
  passing in 2-digit years on the assumption that a year like "70" would be
  treated as 1970, but starting in 2020 this would be treated as 2070
  instead. Reported by Bernhard M. Wiedemann. RT #124787.

- Added timelocal_modern and timegm_modern variants as optional exports. These
  versions do not munge years at all. They treat the year value that they are
  given exactly as-is.


1.26     2018-05-20 (TRIAL RELEASE)

- Fixed the tests so they will not break in the year 2020. The tests were
  passing in 2-digit years on the assumption that a year like "70" would be
  treated as 1970, but starting in 2020 this would be treated as 2070
  instead. Reported by Bernhard M. Wiedemann. RT #124787.

- Added timelocal_modern and timegm_modern variants as optional exports. These
  versions do not munge years at all. They treat the year value that they are
  given exactly as-is.


1.25     2016-11-17

- Reduce memory usage by only loading Config if needed and not importing from
  Carp. Based on PR #2 from J. Nick Coston.


1.24     2016-08-13

- Set the INSTALLDIRS to 'perl' for Perl 5.10 and earlier. Without this, you
  can upgrade Time::Local from CPAN but perl will not see the upgraded
  version. Reported by Olivier Mengué. RT #116825.


1.2300  2012-07-20

- Doh, fix the repo & bugtracker info in the META files.


1.2200  2012-07-09

- Explicitly require Test::More 0.88+ for tests.


1.2100  2012-07-09

- A seconds value greater than 59 but less than 60 caused timegm() and
  timelocal() to croak. Now we allow any value that's less than 60. RT #78189.


1.2000  2011-01-02

- Release 1.1902 as a stable version without any further chances.


1.1902  2010-12-16  TRIAL RELEASE

- Merge all changes from blead perl.