@@ -1,5 +1,9 @@
 {{$NEXT}}
 
+- Some tests which required support for epoch values larger than 2**32 were
+  not being skipped when the underlying Perl did not support that.
+
+
 1.27     2018-06-09
 
 - This release is identical to 1.26 except that it is a stable release, not a
